--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "php": "^7.0",
     "spatie/array-to-xml": "^2.8",
     "ext-json": "*",
-    "ext-openssl": "*"
+    "ext-openssl": "*",
+    "ext-gd": "*"
   }
 }
