feature:log:log helper

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "spatie/array-to-xml": "^2.8",
     "ext-json": "*",
     "ext-openssl": "*",
-    "ext-gd": "*"
+    "ext-gd": "*",
+    "ext-curl": "*"
   }
 }
