--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   - composer self-update
 
 install:
-  - composer install
+  - composer install -vvv
 
 script:
   - php vendor/bin/phpunit -c phpunit.xml
